# PikaAnyArm

./: requirements.txt
install/: local_setup.sh  setup.sh
install/nero/lib/nero/: nero_ms_ctrl  nero_read_master  nero_single_ctrl
install/nero/share/nero/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nero_description/share/nero_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nero_description/share/nero_description/launch/: display_xacro.launch.py
install/nero_description/share/nero_description/urdf/: nero_dual_arm_with_gripper_generated.urdf  nero_with_gripper_description.urdf  nero_with_left_revo2_description.xacro  nero_with_revo2_flange_description.xacro
install/nero_msgs/share/nero_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pika_remote_nero/lib/pika_remote_nero/: nero_IK.py  teleop_nero_publish.py
install/pika_remote_nero/share/pika_remote_nero/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
nero/nero_ros/src/nero/: package.xml  setup.cfg  setup.py
nero/nero_ros/src/nero_description/: CMakeLists.txt
nero/nero_sdk/: setup.py
nero/nero_sdk/nero_sdk/: __init__.py
nero/pika_remote_nero/: CMakeLists.txt  package.xml  requirements.txt  setup.py
nero/pika_remote_nero/config/: nero_left_params.yaml  nero_params.yaml  nero_right_params.yaml
nero/pika_remote_nero/launch/: teleop_dual_nero.launch.py  teleop_single_nero.launch.py
nero/pika_remote_nero/scripts/: arm_FIK.py  nero_FK.py  nero_IK.py  teleop_nero_publish.py
piper/pika_remote_piper/scripts/: piper_FK.py  piper_IK.py  teleop_piper_publish.py  test_piper_sim.py
(+52 files in other folders)
